update copyright and post content

--- a/src/pug/contact.pug
+++ b/src/pug/contact.pug
@@ -105,7 +105,7 @@ html(lang='en')
                                     span.fa-stack.fa-lg
                                         i.fas.fa-circle.fa-stack-2x
                                         i.fab.fa-github.fa-stack-1x.fa-inverse
-                        p.copyright.text-muted Copyright © Your Website 2021
+                        p.copyright.text-muted Copyright &copy; Your Website 2021
 
         // Bootstrap core JS
         script(src='https://code.jquery.com/jquery-3.5.1.min.js')
