--- a/src/pug/post.pug
+++ b/src/pug/post.pug
@@ -92,9 +92,8 @@ html(lang='en')
                         p
                             | Placeholder text by
                             a(href='http://spaceipsum.com/') Space Ipsum
-                            | . Photographs by
+                            | &middot; Images by
                             a(href='https://www.flickr.com/photos/nasacommons/') NASA on The Commons
-                            | .
         hr
         // Footer
         footer
@@ -117,7 +116,7 @@ html(lang='en')
                                     span.fa-stack.fa-lg
                                         i.fas.fa-circle.fa-stack-2x
                                         i.fab.fa-github.fa-stack-1x.fa-inverse
-                        p.copyright.text-muted Copyright © Your Website 2021
+                        p.copyright.text-muted Copyright &copy; Your Website 2021
 
         // Bootstrap core JS
         script(src='https://code.jquery.com/jquery-3.5.1.min.js')
