--- a/src/pug/includes/scripts.pug
+++ b/src/pug/includes/scripts.pug
@@ -2,4 +2,4 @@
 script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js')
 
 // Core theme JS
-script(src='js/scripts.js')
+script(src=`${site.base}/js/scripts.js`)
