--- a/src/pug/includes/css.pug
+++ b/src/pug/includes/css.pug
@@ -6,4 +6,4 @@ link(href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700ita
 link(href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800', rel='stylesheet', type='text/css')
 
 // Core theme CSS (includes Bootstrap)
-link(href='css/styles.css', rel='stylesheet')
+link(href=`${site.base}/css/styles.css`, rel='stylesheet')
