added a comment for clarity

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,5 @@
-<!doctype html>
+<!-- beginning of basic Jekyll template code -->
+<!-- <!doctype html>
 <html lang="en">
 
 <head>
@@ -10,8 +11,8 @@
    {{ content }}
 </body>
 
-</html>
-
+</html> -->
+<!-- end of basic Jekyll template code -->
 
 <!DOCTYPE html>
 <html lang="en">
