--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,3 @@
-<!-- beginning of basic Jekyll template code -->
-<!-- <!doctype html>
-<html lang="en">
-
-<head>
-   <meta charset="utf-8">
-   <title>{{ page.title }}</title>
-</head>
-
-<body>
-   {{ content }}
-</body>
-
-</html> -->
-<!-- end of basic Jekyll template code -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -32,10 +16,10 @@
    <meta name="msvalidate.01" content="41C763BE2681A36D3DCB8CC46F33A20F" />
    <link rel="icon" href="favicon-512x512.png" />
    <meta property="og:url" content="https://love-of-god-and-of-all-men.github.io" />
-   <meta property="og:title" content="The Love of God and of All Men" />
+   <meta property="og:title" content="{{ page.title }}" />
    <meta property="og:description" content="Doing my best to spread God's love to everyone" />
    <meta property="og:image" content="https://love-of-god-and-of-all-men.github.io/God-loves-you-chalk.jpg" />
-   <title>The Love of God and of All Men</title>
+   <title>{{ page.title }}</title>
    <!-- Bootstrap Core CSS -->
    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
    <!-- Theme CSS -->
@@ -88,7 +72,7 @@
          <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                <div class="site-heading">
-                  <h1>The Love of God and of All Men</h1>
+                  <h1>{{ page.title }}</h1>
                   <hr class="small">
                   <span class="subheading">Doing my best to spread God's love to everyone</span>
                   <p class="home-date">
@@ -172,7 +156,9 @@
                });
             </script>
 
-            <div class="post-preview">
+            {{content}}
+            <!-- Make the content variable eventually automatically output the 5 latest posts following the format below. -->
+            <!-- <div class="post-preview">
                <a href="/posts/2023/january/getting-to-know-nt">
                   <img src="/img/headers/front-page/bible-from-rawpixel.webp" class="post-preview-image" width="300px"
                      height="200px">
@@ -186,7 +172,7 @@
                <p class="post-meta">Posted by Riley Grigg on <time datetime="2023-01-05T15:44-07:00">January 5, 2023 at
                      3:44 PM MST</time></p>
             </div>
-            <hr>
+            <hr> -->
             <!-- Pager -->
             <ul class="pager">
                <li class="next">
