moving the navigation to a single, easy to manage location

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,33 +39,7 @@
 </head>
 
 <body onload="genTip()">
-   <!-- Navigation -->
-   <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
-      <div class="container-fluid">
-         <!-- Brand and toggle get grouped for better mobile display -->
-         <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-               data-target="#bs-example-navbar-collapse-1">
-               <span class="sr-only">Toggle navigation</span>
-               Menu <i class="fa fa-bars"></i>
-            </button>
-            <a class="navbar-brand" href="/">The Love of God and of All Men</a>
-         </div>
-         <!-- Collect the nav links, forms, and other content for toggling -->
-         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-               <li>
-                  <a href="/" title="Go Home (ALT-H)" accesskey="h">Home</a>
-               </li>
-               <li>
-                  <a href="/archive" title="Archive (ALT-A)" accesskey="a">Archive</a>
-               </li>
-            </ul>
-         </div>
-         <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container -->
-   </nav>
+   {% include navigation.html %}
    <!-- Page Header -->
    <!-- Set your background image for this header on the line below. -->
    <header class="intro-header" style="background-image: url('/img/headers/front-page/God-loves-you-chalk.webp');">
