moving footer to _includes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -158,35 +158,7 @@
          </div>
       </div>
    </div>
-   <!-- Footer -->
-   <footer>
-      <div class="container">
-         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-               <ul class="list-inline text-center">
-                  <li>
-                     <a href="https://facebook.com/riley.grigg.1" target="_blank">
-                        <span class="fa-stack fa-lg">
-                           <i class="fa fa-circle fa-stack-2x"></i>
-                           <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                        </span>
-                     </a>
-                  </li>
-                  <li>
-                     <a href="https://github.com/griggril000" target="_blank">
-                        <span class="fa-stack fa-lg">
-                           <i class="fa fa-circle fa-stack-2x"></i>
-                           <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                        </span>
-                     </a>
-                  </li>
-               </ul>
-               <footer id="foot01" class="copyright"></footer>
-               <script src="footer.js"></script>
-            </div>
-         </div>
-      </div>
-   </footer>
+   {% include footer.html %}
    <!-- jQuery -->
    <script src="vendor/jquery/jquery.min.js"></script>
    <!-- Bootstrap Core JavaScript -->
