--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -16,6 +16,8 @@
             <li>
                <a href="{{ item.link }}" {% if page.url==item.link %}style="color: red;" {% endif %}>
                   {{ item.name }}
+                  <br>
+                  {{ page.url }}
                </a>
             </li>
             {% endfor %}
