--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,9 @@
    <!-- Bootstrap Core CSS -->
    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
    <!-- Theme CSS -->
-   <link href="css/clean-blog.min.css" rel="stylesheet">
+   <link href="/assets/css/clean-blog.min.css" rel="stylesheet">
    <!-- Menu CSS -->
-   <link href="css/menu.css" rel="stylesheet">
-   <link rel="stylesheet" href="/assets/css/styles.css">
+   <link href="/assets/css/menu.css" rel="stylesheet">
    <!-- Custom Fonts -->
    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
