--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
    <meta name="google-site-verification" content="hlYP3FRvFCuR1tXGgIjeIddGUvDxcrxAUM87lp19mrI" />
    <!-- Bing site index verification code -->
    <meta name="msvalidate.01" content="41C763BE2681A36D3DCB8CC46F33A20F" />
-   <link rel="icon" href="favicon-512x512.png" />
+   <link rel="icon" href="/favicon-512x512.png" />
    <meta property="og:url" content="https://love-of-god-and-of-all-men.github.io" />
    <meta property="og:title" content="{{ page.title }}" />
    <meta property="og:description" content="Doing my best to spread God's love to everyone" />
@@ -42,7 +42,7 @@
    {% include navigation.html %}
    <!-- Page Header -->
    <!-- Set your background image for this header on the line below. -->
-   <header class="intro-header" style="background-image: url('/img/headers/front-page/God-loves-you-chalk.webp');">
+   <header class="intro-header" style="background-image: url('/assets/images/headers/front-page/God-loves-you-chalk.webp');">
       <div class="container">
          <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -69,7 +69,7 @@
                      <br>
                      <iframe src="https://free.timeanddate.com/clock/i5zuu0zh/n220/fn15/fs18/tct/pct/ta1"
                         frameborder="0" width="151" height="23" allowtransparency="true"></iframe><br>
-                     <script type="text/javascript" src="/js/clean-blog.min.js"></script>
+                     <script type="text/javascript" src="/assets/js/clean-blog.min.js"></script>
                   <p class="tip" id="quote">Loading Quote...</p>
                   <p class="tip"><a href="#" id="quote-share-link">Share Quote</a></p>
                </div>
@@ -164,7 +164,7 @@
    <!-- Bootstrap Core JavaScript -->
    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
    <!-- Theme JavaScript -->
-   <script src="js/clean-blog.min.js"></script>
+   <script src="/assets/js/clean-blog.min.js"></script>
 </body>
 
 </html>
