fixing style issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,13 +22,13 @@
    <meta property="og:image" content="https://love-of-god-and-of-all-men.github.io/God-loves-you-chalk.jpg" />
    <title>{{ page.title }}</title>
    <!-- Bootstrap Core CSS -->
-   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
    <!-- Theme CSS -->
    <link href="/assets/css/clean-blog.min.css" rel="stylesheet">
    <!-- Menu CSS -->
    <link href="/assets/css/menu.css" rel="stylesheet">
    <!-- Custom Fonts -->
-   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+   <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
       type='text/css'>
    <link
@@ -153,9 +153,9 @@
    </div>
    {% include footer.html %}
    <!-- jQuery -->
-   <script src="vendor/jquery/jquery.min.js"></script>
+   <script src="/vendor/jquery/jquery.min.js"></script>
    <!-- Bootstrap Core JavaScript -->
-   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+   <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
    <!-- Theme JavaScript -->
    <script src="/assets/js/clean-blog.min.js"></script>
 </body>
