--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,8 @@
    {% include navigation.html %}
    <!-- Page Header -->
    <!-- Set your background image for this header on the line below. -->
-   <header class="intro-header" style="background-image: url('/assets/images/headers/front-page/God-loves-you-chalk.webp');">
+   <header class="intro-header"
+      style="background-image: url('/assets/images/headers/front-page/God-loves-you-chalk.webp');">
       <div class="container">
          <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -130,24 +131,8 @@
                   });
                });
             </script>
-
+            
             {{content}}
-            <!-- Make the content variable eventually automatically output the 5 latest posts following the format below. -->
-            <!-- <div class="post-preview">
-               <a href="/posts/2023/january/getting-to-know-nt">
-                  <img src="/img/headers/front-page/bible-from-rawpixel.webp" class="post-preview-image" width="300px"
-                     height="200px">
-                  <h2 class="post-title">
-                     Getting To Know The New Testament
-                  </h2>
-                  <h3 class="post-subtitle">
-                     I invite you to think about these insights as you review the four gospels in the Bible this year.
-                  </h3>
-               </a>
-               <p class="post-meta">Posted by Riley Grigg on <time datetime="2023-01-05T15:44-07:00">January 5, 2023 at
-                     3:44 PM MST</time></p>
-            </div>
-            <hr> -->
          </div>
       </div>
    </div>
