--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
                <div class="site-heading">
                   <h1>{{ page.title }}</h1>
                   <!-- hides extra content on post pages -->
-                  <div {% if page.layout == post %}class="hidden"{% endif %}>
+                  <div {% if layout == post %}class="hidden"{% endif %}>
                      <hr class="small">
                      <span class="subheading">Doing my best to spread God's love to everyone</span>
                      <p class="home-date">
