--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,8 @@
                <div class="site-heading">
                   <h1>{{ page.title }}</h1>
                   <!-- hides extra content on post pages -->
+                  <!-- variable for testing purposes -->
+                  {% layout %}
                   <div {% if layout == post %}class="hidden"{% endif %}>
                      <hr class="small">
                      <span class="subheading">Doing my best to spread God's love to everyone</span>
