--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
                   <h1>{{ page.title }}</h1>
                   <!-- hides extra content on post pages -->
                   <!-- variable for testing purposes -->
-                  {{layout}}
+                  {{layout.layout}}
                   <div {% if layout==post %}class="hidden" {% endif %}>
                      <hr class="small">
                      <span class="subheading">Doing my best to spread God's love to everyone</span>
