fixing formatting issue (missing CSS style)

--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,5 +1,14 @@
 ---
+layout: default
 ---
 <h1>{{ page.name }}</h1>
 
 {{ content }}
+
+<h2>Posts</h2>
+<ul>
+    {% assign filtered_posts = site.posts | where: 'author', page.short_name %}
+    {% for post in filtered_posts %}
+    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+</ul>
