--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,13 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<!-- date_to_string formats the date nicely -->
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+<p>
+    <!-- date_to_string formats the date nicely -->
+    {{ page.date | date_to_string }}
+    {% assign author = site.authors | where: 'short_name', page.author | first %}
+    {% if author %}
+    - <a href="{{ author.url }}">{{ author.name }}</a>
+    {% endif %}
+</p>
 
 {{ content }}
