--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+
+<!-- Thanks to the original pen and its creators: https://codepen.io/t_afif/pen/zYLeOLM?editors=1100 -->
+<img class="profile-img"
+    src="https://love-of-god-and-of-all-men.github.io/assets/images/profiles/{{ author.short_name }}.png"
+    alt="{{ author.name }}">
+
 <h1>{{ page.name }}</h1>
 
 {{ content }}
