--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -12,7 +12,7 @@ layout: default
 {{ content }}
 
 <h2>Posts</h2>
-<ul>
+<ul style="list-style-type: none;">
     {% assign filtered_posts = site.posts | where: 'author', page.short_name %}
     {% for post in filtered_posts %}
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
