--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -3,9 +3,11 @@ layout: default
 ---
 
 <!-- Thanks to the original pen and its creators: https://codepen.io/t_afif/pen/zYLeOLM?editors=1100 -->
+{% for author in site.authors %}
 <img class="profile-img"
     src="https://love-of-god-and-of-all-men.github.io/assets/images/profiles/{{ author.short_name }}.png"
     alt="{{ author.name }}">
+{% endfor %}
 
 <h1>{{ page.name }}</h1>
 
