--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
+<h2 class="subheading">{{ page.subtitle }}</h2>
 <p>
     <!-- date_to_string formats the date nicely -->
     {{ page.date | date_to_string }}
