--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
    <!-- CSS for everything else -->
    <link rel="stylesheet" href="/assets/css/styles.css">
    <!-- Custom Fonts -->
-   <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+   {% include font-awesome.html %}
    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
       type='text/css'>
    <link
