--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+<!-- TODO: To be removed if the conditional statement in the default layout is sucessful -->
+<!--
 <h1>{{ page.title }}</h1>
 <hr>
 <h2 class="subheading">{{ page.subtitle }}</h2>
@@ -12,5 +14,7 @@ layout: default
     {% endif %}
     on {{ page.date | date: "%A, %B %-d, %Y" }} at {{ page.date | date: "%l:%M %p %Z" }}
 </p>
+-->
+<!-- TODO: To be removed if the conditional statement in the default layout is sucessful -->
 
 {{ content }}
