testing conditional statement

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,11 @@
       <div class="container">
          <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+               {% if page.is_post %}
+               {% include postheading.html %}
+               {% else %}
                {% include siteheading.html %}
+               {% endif %}
             </div>
          </div>
       </div>
