testing date in post heading

--- a/_includes/postheading.html
+++ b/_includes/postheading.html
@@ -5,9 +5,11 @@
       <span class="meta">Posted by {% assign author = site.authors | where: 'short_name', page.author | first %}
             {% if author %}
             <a href="{{ author.url }}">{{ author.name }}</a>
-            {% endif %} 
-            on <time datetime="2022-12-13T12:14-07:00">December 13, 2022
+            {% endif %}
+            <!-- on <time datetime="2022-12-13T12:14-07:00">December 13, 2022
                   at
-                  12:14 PM MST</time></span>
+                  12:14 PM MST</time> -->
+            on {{ page.date | date: "%A, %B %-d, %Y" }} at {{ page.date | date: "%l:%M %p %Z" }}
+      </span>
 </div>
 </div>
