Changing color for mobile browser bars

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description" content="Doing my best to spread God's love to everyone">
-   <meta name="theme-color" content="#21B86C">
+   <meta name="theme-color" content="#FFFFFF">
    <meta name="google-site-verification" content="hlYP3FRvFCuR1tXGgIjeIddGUvDxcrxAUM87lp19mrI" />
    <!-- Bing site index verification code -->
    <meta name="msvalidate.01" content="41C763BE2681A36D3DCB8CC46F33A20F" />
