--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -5,7 +5,7 @@ layout: default
 <!-- Thanks to the original pen and its creators: https://codepen.io/t_afif/pen/zYLeOLM?editors=1100 -->
 <img class="profile-img"
     src="https://love-of-god-and-of-all-men.github.io/assets/images/profiles/{{ page.short_name }}.png"
-    alt="{{ page.name }}">
+    alt="photo of {{ page.name }}">
 
 <h1>{{ page.name }}</h1>
 
