--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,10 +46,10 @@
          <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                <!-- is_post variable from _config.yml -->
-               {% if page.is_post %}
-               {% include postheading.html %}
-               {% else %}
+               {% if page.url == "/" %}
                {% include siteheading.html %}
+               {% else %}
+               {% include postheading.html %}
                {% endif %}
             </div>
          </div>
