--- a/_includes/postheading.html
+++ b/_includes/postheading.html
@@ -2,11 +2,13 @@
 <div class="post-heading">
       <h1>{{ page.title }}</h1>
       <h2 class="subheading">{{ page.subtitle }}</h2>
+      {% if page.is_post %}
       <span class="meta">Posted by {% assign author = site.authors | where: 'short_name', page.author | first %}
             {% if author %}
             <a href="{{ author.url }}">{{ author.name }}</a>
             {% endif %}
             on {{ page.date | date: "%A, %B %-d, %Y" }} at {{ page.date | date: "%l:%M %p %Z" }}
       </span>
+      {% endif %}
 </div>
 </div>
