--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -1,6 +1,8 @@
 .profile-img {
-  vertical-align: middle;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+    vertical-align: middle;
+    width: 125px;
+    height: 125px;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 50%;
 }
