--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- Page Header -->
 <!-- Set your background image for this header on the line below. -->
 {% if page.image %}
-<header class="intro-header" style="background-image: url('/assets/images/headers/{{ page.image }}');">
+<header class="intro-header" style="background-image: url('/assets/images/headers/{{ page.image }}.webp');">
     {% else %}
     <header class="intro-header"
         style="background-image: url('/assets/images/headers/front-page/God-loves-you-chalk.webp');">
