--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
    <meta property="og:url" content="https://love-of-god-and-of-all-men.github.io" />
    <meta property="og:title" content="{{ page.title }}" />
    <meta property="og:description" content="Doing my best to spread God's love to everyone" />
-   <meta property="og:image" content="https://love-of-god-and-of-all-men.github.io/God-loves-you-chalk.jpg" />
+   <meta property="og:image" content="{{ page.image }}" />
    <title>{{ page.title }}</title>
    <!-- Bootstrap Core CSS -->
    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
