--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,13 @@
    <meta property="og:url" content="https://love-of-god-and-of-all-men.github.io" />
    <meta property="og:title" content="{{ page.title }}" />
    <meta property="og:description" content="Doing my best to spread God's love to everyone" />
-   <meta property="og:image" content="{{ page.image }}" />
+   <!-- Code below sets the metadata image url based on if it is a blog post page or not -->
+   {% if page.is_post %}
+   <meta property="og:image"
+      content="https://love-of-god-and-of-all-men.github.io/assets/images/headers/{{ post.image }}.webp" />
+   {% else %}
+   <meta property="og:image" content="https://love-of-god-and-of-all-men.github.io/God-loves-you-chalk.jpg" />
+   {% endif %}
    <title>{{ page.title }}</title>
    <!-- Bootstrap Core CSS -->
    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
