--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,11 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   {% if page.is_post %}
+   <meta name="description" content="{{ page.subtitle }}">
+   {% else %}
    <meta name="description" content="Doing my best to spread God's love to everyone">
+   {% endif %}
    <meta name="theme-color" content="#FFFFFF">
    <meta name="google-site-verification" content="hlYP3FRvFCuR1tXGgIjeIddGUvDxcrxAUM87lp19mrI" />
    <!-- Bing site index verification code -->
@@ -18,7 +22,7 @@
    <!-- Code below sets the metadata image url based on if it is a blog post page or not -->
    {% if page.is_post %}
    <meta property="og:image"
-      content="https://love-of-god-and-of-all-men.github.io/assets/images/headers/{{ post.image }}.webp" />
+      content="https://love-of-god-and-of-all-men.github.io/assets/images/headers/{{ page.image }}.webp" />
    {% else %}
    <meta property="og:image" content="https://love-of-god-and-of-all-men.github.io/God-loves-you-chalk.jpg" />
    {% endif %}
